--- a/WebPortfolio/index.html
+++ b/WebPortfolio/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <div class="parallax">
-        <div class="potrait"><img src="Profile_picture.jpg" alt="Your Portrait" class="Image"></div>
+        <div class="potrait"><img src="pictures/Profile_picture.jpg" alt="Your Portrait" class="Image"></div>
 
         <div class="text">
             <p class="introtext">Hey There! My name is Samuel Cobb and I am a Computer and Data Scientist Studying at Houghton University!</p>
