--- a/WebPortfolio/About.html
+++ b/WebPortfolio/About.html
@@ -124,7 +124,7 @@
     </div>
     <footer>
         <span><a href="#">Email</a></span>
-        <span><a href="www.linkedin.com/in/samuel-cobb-b448a3292">LinkedIn</a></span>
+        <span><a href="www.linkedin.com/in/samuel-cobb-b448a3292" target="_blank">LinkedIn</a></span>
     </footer>
     <script>
         let slideIndex = 1;
